cabal-version:      3.0

name:               zkfold-cardano-backends
version:            0.1.0.0
category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov, Antonio Hernandez
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common lang
  default-language: Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    ViewPatterns
    AllowAmbiguousTypes
    FlexibleContexts
    RankNTypes
    TypeApplications
    DataKinds
    InstanceSigs
    MultiParamTypeClasses
    RecordWildCards
    ScopedTypeVariables
    FlexibleInstances
    NoImplicitPrelude
    OverloadedStrings
    ExplicitNamespaces
    TypeOperators
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -- -Wunused-packages
    -Wmissing-deriving-strategies
  if flag(pedantic)
    ghc-options:
      -Werror

common lang-extra
  ghc-options:
    -fobject-code
    -fno-specialise
    -fno-spec-constr
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-unbox-strict-fields 
    -fno-unbox-small-strict-fields
    -fno-full-laziness
    -fexpose-all-unfoldings
    -- Comment the following line to enable PlutusTx error messages
    -- By default, we defer the errors as they mess with the HLS
    -fplugin-opt PlutusTx.Plugin:defer-errors

executable plonkVerifierTx-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierTx/plonkVerifierTx-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    zkfold-cardano                 ,
    QuickCheck                     ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-cardano-scripts         ,

executable plonkVerifierTx-transfer-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierTx/plonkVerifierTx-transfer-transaction
  build-depends:
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    cborg                          ,
    parsec                         ,

executable plonkVerifierTx-withdraw-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierTx/plonkVerifierTx-withdraw-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    zkfold-cardano                 ,
    zkfold-example                 ,

executable plonkVerifierToken-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierToken/plonkVerifierToken-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-cardano-scripts         ,
    QuickCheck                     ,

executable plonkVerifierToken-transfer-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierToken/plonkVerifierToken-transfer-transaction
  build-depends:
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    cborg                          ,
    parsec                         ,
    zkfold-cardano                 ,

executable plonkVerifierToken-minting-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierToken/plonkVerifierToken-minting-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    plutus-ledger-api       ^>=1.36,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,

executable balancing-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierTx-balancing/balancing-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    filepath                       ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-cardano-scripts               ,
    QuickCheck                     ,

executable balancing-parse-input
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonkVerifierTx-balancing/balancing-parse-input
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    directory                      ,
    filepath                       ,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-cardano-scripts               ,

executable rollup-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   rollup/rollup-init-transaction
  other-modules:
    Rollup.Example
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    directory                      ,
    filepath                       ,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    random                         ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-cardano-scripts               ,
    QuickCheck

executable rollup-update-loop
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   rollup/rollup-update-loop
  other-modules:
    Rollup.Example
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    directory                      ,
    filepath                       ,
    plutus-tx               ^>=1.36,
    plutus-ledger-api       ^>=1.36,
    random                         ,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-cardano-scripts               ,
    QuickCheck

executable rollup-clear-data
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   rollup/rollup-clear-data
  other-modules:
    Rollup.CardanoCli
    Rollup.ParseJson
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    cborg                          ,
    directory                      ,
    filepath                       ,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    text                           ,
    zkfold-cardano                 ,
    zkfold-cardano-scripts
