cabal-version:      3.0

name:               zkfold-cli
version:            0.1.0.0
category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov, Antonio Hernandez
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common lang
  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -- -Wunused-packages
    -Wmissing-deriving-strategies
  if flag(pedantic)
    ghc-options:
      -Werror

common lang-extra
  ghc-options:
    -fobject-code
    -fno-specialise
    -fno-spec-constr
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-unbox-strict-fields 
    -fno-unbox-small-strict-fields
    -fno-full-laziness
    -fexpose-all-unfoldings
    -- Comment the following line to enable PlutusTx error messages
    -- By default, we defer the errors as they mess with the HLS
    -fplugin-opt PlutusTx.Plugin:defer-errors

executable zkfold-cli
    import:           lang
    import:           lang-extra
    default-language: Haskell2010
    ghc-options:      -rtsopts
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        ZkFold.Cardano.Balancing.Transaction.Balancing
        ZkFold.Cardano.Balancing.Transaction.Init
        ZkFold.Cardano.Balancing.Transaction.Transfer
        ZkFold.Cardano.Options.CardanoCLI
        ZkFold.Cardano.Options.ZkCLI
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Burning
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Init
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Minting
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Transfer
        ZkFold.Cardano.PlonkupVerifierTx.PlonkupVerifierTx
        ZkFold.Cardano.Rollup.Transaction.Clear
        ZkFold.Cardano.Rollup.Transaction.Init
        ZkFold.Cardano.Rollup.Transaction.Next
        ZkFold.Cardano.Rollup.Transaction.Update
        ZkFold.Cardano.Rollup.Data
    build-depends:
        aeson                          ,
        atlas-cardano                  ,
        base              >= 4.9 && < 5,
        bytestring                     ,
        cardano-api                    ,
        cardano-cli                    ,
        cardano-crypto-class           ,
        cborg                          ,
        containers                     ,
        directory                      ,
        filepath                       ,
        optparse-applicative-fork      ,
        parsec                         ,
        plutus-ledger-api       ^>=1.36,
        plutus-tx               ^>=1.36,
        prettyprinter                  ,
        QuickCheck                     ,
        random                         ,
        serialise                      ,
        symbolic-base                  ,
        text                           ,
        transformers-except            ,
        zkfold-cardano                 ,
        zkfold-cardano-scripts         ,
        zkfold-example                 ,