cabal-version:      3.0

name:               zkfold-cli
version:            0.1.0.0
category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov, Antonio Hernandez
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common lang
  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -- -Wunused-packages
    -Wmissing-deriving-strategies
  if flag(pedantic)
    ghc-options:
      -Werror

common lang-extra
  ghc-options:
    -fobject-code
    -fno-specialise
    -fno-spec-constr
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-unbox-strict-fields 
    -fno-unbox-small-strict-fields
    -fno-full-laziness
    -fexpose-all-unfoldings
    -- Comment the following line to enable PlutusTx error messages
    -- By default, we defer the errors as they mess with the HLS
    -fplugin-opt PlutusTx.Plugin:defer-errors

executable asterizm
    import:           lang
    import:           lang-extra
    default-language: Haskell2010
    ghc-options:      -rtsopts
    main-is:          Main.hs
    hs-source-dirs:   asterizm
    other-modules:
        ZkFold.Cardano.Asterizm.Types
        ZkFold.Cardano.Asterizm.Utils
        ZkFold.Cardano.Asterizm.Transaction.Init
        ZkFold.Cardano.Asterizm.Transaction.Client
        ZkFold.Cardano.Asterizm.Transaction.Message
        ZkFold.Cardano.Asterizm.Transaction.Relayer
        ZkFold.Cardano.Asterizm.Transaction.Retrieve
        ZkFold.Cardano.Options.Common
        ZkFold.Cardano.Options.AsterizmCLI
    build-depends:
        aeson                          ,
        atlas-cardano                  ,
        base              >= 4.9 && < 5,
        base16-bytestring              ,
        bytestring                     ,
        cardano-api                    ,
        cardano-cli                    ,
        cardano-crypto-class           ,
        directory                      ,
        filepath                       ,
        http-conduit                   ,
        optparse-applicative-fork      ,
        parsec                         ,
        plutus-core                    ,
        plutus-ledger-api              ,
        plutus-tx                      ,
        QuickCheck                     ,
        symbolic-base                  ,
        text                           ,
        transformers-except            ,
        zkfold-cardano                 ,
        zkfold-cardano-scripts         ,
        zkfold-example                 ,

executable rollup
    import:           lang
    import:           lang-extra
    default-language: Haskell2010
    ghc-options:      -rtsopts
    main-is:          Main.hs
    hs-source-dirs:   rollup
    other-modules:
        ZkFold.Cardano.Atlas.Utils
        ZkFold.Cardano.Options.Common
        ZkFold.Cardano.Options.RollupCLI
        ZkFold.Cardano.Rollup.Transaction.Clear
        ZkFold.Cardano.Rollup.Transaction.Init
        ZkFold.Cardano.Rollup.Transaction.Update
        ZkFold.Cardano.Rollup.Data
    build-depends:
        aeson                          ,
        atlas-cardano                  ,
        base              >= 4.9 && < 5,
        base16-bytestring              ,
        bytestring                     ,
        cardano-api                    ,
        cardano-cli                    ,
        cardano-crypto-class           ,
        containers                     ,
        directory                      ,
        extra                          ,
        filepath                       ,
        optparse-applicative-fork      ,
        parsec                         ,
        plutus-ledger-api              ,
        plutus-tx                      ,
        QuickCheck                     ,
        random                         ,
        symbolic-base                  ,
        transformers-except            ,
        zkfold-cardano                 ,
        zkfold-cardano-scripts         ,
        zkfold-example                 ,

executable token
    import:           lang
    import:           lang-extra
    default-language: Haskell2010
    ghc-options:      -rtsopts
    main-is:          Main.hs
    hs-source-dirs:   token
    other-modules:
        ZkFold.Cardano.Atlas.Utils
        ZkFold.Cardano.Options.Common
        ZkFold.Cardano.Options.TokenCLI
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Burning
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Init
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Minting
        ZkFold.Cardano.PlonkupVerifierToken.Transaction.Transfer
    build-depends:
        aeson                          ,
        atlas-cardano                  ,
        base              >= 4.9 && < 5,
        base16-bytestring              ,
        bytestring                     ,
        cardano-api                    ,
        cardano-cli                    ,
        cardano-crypto-class           ,
        directory                      ,
        extra                          ,
        filepath                       ,
        optparse-applicative-fork      ,
        parsec                         ,
        plutus-ledger-api              ,
        plutus-tx                      ,
        QuickCheck                     ,
        symbolic-base                  ,
        transformers-except            ,
        zkfold-cardano                 ,
        zkfold-cardano-scripts         ,
        zkfold-example                 ,

executable plonkup-verifier
    import:           lang
    import:           lang-extra
    default-language: Haskell2010
    ghc-options:      -rtsopts
    main-is:          Main.hs
    hs-source-dirs:   plonkup-verifier
    other-modules:
        ZkFold.Cardano.Atlas.Utils
        ZkFold.Cardano.Options.Common
        ZkFold.Cardano.Options.CardanoCLI
        ZkFold.Cardano.Options.VerifierCLI
        ZkFold.Cardano.PlonkupVerifierTx.Types
        ZkFold.Cardano.PlonkupVerifierTx.Transaction.Init
        ZkFold.Cardano.PlonkupVerifierTx.Transaction.Transfer
        ZkFold.Cardano.PlonkupVerifierTx.Transaction.Tx
    build-depends:
        aeson                          ,
        atlas-cardano                  ,
        base              >= 4.9 && < 5,
        base16-bytestring              ,
        bytestring                     ,
        cardano-api                    ,
        cardano-cli                    ,
        cardano-crypto-class           ,
        containers                     ,
        directory                      ,
        extra                          ,
        filepath                       ,
        optparse-applicative-fork      ,
        parsec                         ,
        plutus-ledger-api              ,
        plutus-tx                      ,
        QuickCheck                     ,
        symbolic-base                  ,
        transformers-except            ,
        zkfold-cardano                 ,
        zkfold-cardano-scripts         ,
        zkfold-example                 ,
